# Toaster

./: .gitignore  LICENSE  README.md  build.sh  package-lock.json  pubspec.yaml  toaster.code-workspace
.server/: Cargo.toml  Dockerfile  adminZone.js  database.js  database.txt  deleteData.html  index.js  index.ts  mailsender.js  package-lock.json  package.json  pages.ts  report.js  reportPosts.js  searchSystem.js  test.yml  timeouts.js  tsconfig.json  userAccounts.js  userLogin.js  userPostRating.js  userPosts.js  utilFunctions.js  validInputTester.js  web
.server/benchmark/: main.py
.server/js/: adminZone.ts  chatSystem.ts  database.ts  errorHandler.ts  licenses.ts  mailsender.ts  notificationSystem.ts  notificationsSystem.ts  report.ts  searchSystem.ts  securityUtils.ts  timeouts.ts  userAccounts.ts  userLogin.ts  userLogins.ts  userPostRating.ts  userPosts.ts  userRating.ts  utilFunctions.ts  validInputTester.ts
.server/pages/: CommunityGuidelines.html  changeLog.html  deleteData.html  privacyPolicy.html  styles.css  termsOfService.html  termsofService.html
.server/src/: admin.rs  create_account.rs  licences.rs  main.rs  notifications.rs  pages.rs  report.rs  reset_password.rs  search.rs  user_login.rs  user_posts.rs  user_profiles.rs  user_ratings.rs  utils.rs
.server/static_data/: jwt.key
.server/web/: flutter_service_worker.js  index.html  main.dart.js  manifest.json  version.json
.server/web/assets/: AssetManifest.json  NOTICES
android/: build.gradle
lib/: accountInfoSettings.dart  errorPages.dart  firebase_options.dart  main.dart  main_dev.dart  (+6 more)
(+59 files in other folders)
