[package]
name = "platrates_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.3"
axum = "0.7.5"
cargo-watch = "8.5.2"
data-encoding = "2.6.0"
hyper = "1.3.1"
jsonwebtoken = "9.3.0"
lazy_static = "1.4.0"
password-hash = "0.5.0"
postgres = "0.19.7"
rand = "0.8.5"
serde = "1.0.199"
serde_json = "1.0.116"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-async-std"] }
tokio = { version = "1.37.0", features = ["full"] }
tower = "0.4.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
